# worldd

./: .gitignore  README.md  install_dev.py  pyproject.toml  requirements.txt  setup.py
src/: A  __init__.py  constants.py  game.py  main.py
src/assets/: __init__.py
src/entities/: animal.py  entity.py  human.py  resource.py
src/systems/: sound_manager.py
src/terrain/: chunk.py
src/ui/: notifications.py  panel.py  particles.py  screen.py  screen_manager.py  tooltip.py  ui_system.py
src/ui/components/: button.py  progress_bar.py  slider.py  text.py
src/ui/panels/: __init__.py  entity_list_panel.py  info_panel.py  minimap_panel.py  selection_panel.py  stats_panel.py  terminal_panel.py  time_panel.py
src/ui/screens/: game_screen.py  main_menu.py  main_menu_screen.py  options.py  options_screen.py  pause.py  pause_screen.py  screen.py  settings_screen.py  world_gen.py  world_gen_screen.py
src/ui/widgets/: slider.py
src/world/: __init__.py  chunk.py  entity.py  resource.py  world.py
src/world/entities/: __init__.py  animal.py  entity.py  entity_types.py  human.py  plant.py  resource.py
src/world/generation/: __init__.py  perlin.py  terrain_generator.py  world_generator.py
src/world/systems/: __init__.py  action_system.py  language_system.py  thought_system.py  time_system.py  weather.py  weather_system.py
